sumo/tests/sumo/extended/vaporizer/errors/begin_missing/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'begin' is missing in definition of a vaporizer.
Quitting (on error).
